--- a/StorhaugenWebsite/Pages/AddFood.razor
+++ b/StorhaugenWebsite/Pages/AddFood.razor
@@ -324,7 +324,7 @@
             <div class="camera-guide-box">
                 @if (_currentStep == ScanStep.Front)
                 {
-                    <div class="logo-hint-zone"><span class="logo-label">LOGO</span></div>
+                    <div class="logo-hint-zone"><span class="logo-label">HELLO<br />FRESH</span></div>
                     <div class="text-hint-zone"><span class="text-label">TITTEL HER</span></div>
                 }
                 <div class="scan-line"></div>
